--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 # Project exclude paths
 /out/
+/ExamplesofJavaPrograms.iml
+/.idea/.gitignore
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/uiDesigner.xml
